--- a/templates/units/unit_create_modal.html
+++ b/templates/units/unit_create_modal.html
@@ -9,9 +9,9 @@
         <button type="button" class="close" data-dismiss="modal" title="{% trans 'Close' %}">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h3 class="modal-title" id="Modal">{% trans 'Add units to the experiment' %}</h3>
+        <h3 class="modal-title" id="Modal">{% trans 'Add unit' %}</h3>
       </div>
-      <form method="post" class="add-unit-form {{ class }}" action="{% url 'experiments:add-units' lab_pk=lab.pk %}" data-field="{{ fields }}">
+      <form method="post" class="add-unit-form {{ class }}" action="{% url 'units:update' lab_pk=lab.pk %}" data-field="{{ fields }}">
         <div class="modal-body">
           {% csrf_token %}
           {{ unit_form }}
