--- a/templates/labs/lab_detail.html
+++ b/templates/labs/lab_detail.html
@@ -162,7 +162,101 @@
         </div>
     {% endif %}
   </section>
+
+  <!-- Right content section -->
+  <section class="col-lg-offset-6 col-lg-6">
+    <div class="box">
+      <div class="box-header"><h3 class="box-title">{% trans 'storages'|title %}</h3></div>
+      <div class="box-body">
+        <div class="list-group">
+          {% for storage in object.storages %}
+          <div class="storage">
+            <span class="list-group-item list-group-item-sm">{{ storage }}
+              <span class="pull-right">
+              <a class="storage-edit" href="#" data-url="{% url 'labs:storage-update' lab_pk=object.pk pk=storage.pk %}">
+                <i class="fa fa-edit"></i></a>
+              <a class="storage-delete" href="#" data-url="{% url 'labs:storage-delete' lab_pk=object.pk pk=storage.pk %}">
+                <i class="fa fa-remove"></i></a>
+              </span>
+            </span>
+            <div class="storage-form-area"></div>
+          </div>
+          {% endfor %}
+          <form class="storage-add" action="{% url 'labs:storage-create' lab_pk=object.pk %}">
+            {{ storage_form }}
+            <button class="btn btn-success" type="submit">{% trans "create" %}</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
   </div>
   <!-- end right content section -->
 {% endblock %}
 {% block modal %}{% include 'alert.html' with obj=object.name %}{% endblock %}
+{% block script %}
+<script type="text/javascript">
+  $('body').on('submit','.storage-add', function (e) {
+    e.preventDefault();
+    e.stopPropagation();
+    var $form = $(e.target);
+    $.post($form.attr('action'), $form.serialize())
+      .fail(function (xhr) {
+          form_fail($form, xhr)
+      }).done(function (response) {
+        location.reload();
+      });
+  });
+
+  $('body').on('click','.storage-edit', function (e) {
+    e.preventDefault();
+    e.stopPropagation();
+    var that = $(this);
+    $.get(that.data('url'),{})
+      .fail(function (xhr) {
+          form_fail($form, xhr)
+      }).done(function (response) {
+        $('.storage').find('.storage-form-area').hide()
+        $('.storage').find('.list-group-item').show()
+        that.closest('.storage').find('.storage-form-area').show().html(response.form_html)
+        that.closest('.storage').find('.list-group-item').hide()
+      });
+  });
+
+  $('body').on('click','.storage-edit-cancel', function (e) {
+    e.preventDefault();
+    e.stopPropagation();
+    var that = $(this);
+    that.closest('.storage').find('.storage-form-area').hide()
+    that.closest('.storage').find('.list-group-item').show()
+  });
+
+  $('body').on('submit','.storage-edit-form', function (e) {
+    e.preventDefault();
+    e.stopPropagation();
+    var $form = $(e.target);
+    $.post($form.attr('action'), $form.serialize())
+      .fail(function (xhr) {
+          form_fail($form, xhr)
+      }).done(function (response) {
+        location.reload();
+      });
+  });
+
+  $('body').on('click','.storage-delete', function (e) {
+    e.preventDefault();
+    e.stopPropagation();
+    var that = $(this);
+    if (confirm("Remove storage")) {
+      $.post(that.data('url'),{})
+        .fail(function (xhr) {
+          form_fail($form, xhr)
+        }).done(function (response) {
+          that.closest('.storage').remove()
+        });
+    } else {
+      return false
+    }
+  });
+</script>
+{% endblock %}
