--- a/templates/labs/lab_detail.html
+++ b/templates/labs/lab_detail.html
@@ -182,7 +182,7 @@
             <div class="storage-form-area"></div>
           </div>
           {% endfor %}
-          <form class="storage-add" action="{% url 'labs:storage-create' lab_pk=object.pk %}">
+          <form class="storage-add"  enctype="multipart/form-data" method="post" action="{% url 'labs:storage-create' lab_pk=object.pk %}">{% csrf_token %}
             {{ storage_form }}
             <button class="btn btn-success" type="submit">{% trans "create" %}</button>
           </form>
@@ -196,17 +196,17 @@
 {% block modal %}{% include 'alert.html' with obj=object.name %}{% endblock %}
 {% block script %}
 <script type="text/javascript">
-  $('body').on('submit','.storage-add', function (e) {
-    e.preventDefault();
-    e.stopPropagation();
-    var $form = $(e.target);
-    $.post($form.attr('action'), $form.serialize())
-      .fail(function (xhr) {
-          form_fail($form, xhr)
-      }).done(function (response) {
-        location.reload();
-      });
-  });
+//  $('body').on('submit','.storage-add', function (e) {
+//    e.preventDefault();
+//    e.stopPropagation();
+//    var $form = $(e.target);
+//    $.post($form.attr('action'), $form.serialize())
+//      .fail(function (xhr) {
+//          form_fail($form, xhr)
+//      }).done(function (response) {
+//        location.reload();
+//      });
+//  });
 
   $('body').on('click','.storage-edit', function (e) {
     e.preventDefault();
@@ -231,17 +231,17 @@
     that.closest('.storage').find('.list-group-item').show()
   });
 
-  $('body').on('submit','.storage-edit-form', function (e) {
-    e.preventDefault();
-    e.stopPropagation();
-    var $form = $(e.target);
-    $.post($form.attr('action'), $form.serialize())
-      .fail(function (xhr) {
-          form_fail($form, xhr)
-      }).done(function (response) {
-        location.reload();
-      });
-  });
+//  $('body').on('submit','.storage-edit-form', function (e) {
+//    e.preventDefault();
+//    e.stopPropagation();
+//    var $form = $(e.target);
+//    $.post($form.attr('action'), $form.serialize())
+//      .fail(function (xhr) {
+//          form_fail($form, xhr)
+//      }).done(function (response) {
+//        location.reload();
+//      });
+//  });
 
   $('body').on('click','.storage-delete', function (e) {
     e.preventDefault();
