--- a/templates/labs/storage_form.html
+++ b/templates/labs/storage_form.html
@@ -1,5 +1,6 @@
 {% load i18n widget_tweaks %}
 <form class="storage-edit-form" enctype="multipart/form-data" method="post" action="{% url 'labs:storage-update' lab_pk=lab.pk pk=storage.pk %}">
+  <input type='hidden' name='csrfmiddlewaretoken' value='{{ csrf_token_value }}'/>
   <div class="form-inline">
     <div class="form-group">
       {% render_field form.type style="width:200px" placeholder=form.type.label %}
@@ -30,6 +31,18 @@
       {% render_field form.key_file %}
     </div>
   </div>
+  <a class="storage-show-more voffset1" href="#">{% trans "More" %}</a>
+            <div class="form-inline storage-more voffset2" style="display: none">
+              <div class="form-group">
+                <label>{{ form.folder_name.label }}</label>
+                {% render_field form.folder_name  placeholder=form.folder_name.label %}
+              </div>
+              <div class="checkbox" style="padding-left: 10px;">
+                <label>
+                  {% render_field form.readonly %}{{ form.readonly.label_tag }}
+                </label>
+              </div>
+            </div>
   <div class="form-inline voffset2">
     <button type="submit" class="btn btn-success" style="width: 48%;">{% trans "Update" %}</button>
     <a href="#" class="btn btn-warning storage-edit-cancel" style="width: 48%;">{% trans "Cancel" %}</a>
