--- a/templates/labs/lab_detail.html
+++ b/templates/labs/lab_detail.html
@@ -197,13 +197,15 @@
                 {% render_field storage_form.host  placeholder=storage_form.host.label %}
               </div>
               <div class="form-group">
-                {% render_field storage_form.username  placeholder=storage_form.username.label %}
-              </div>
-              <div class="form-group">
                 {% render_field storage_form.path  placeholder=storage_form.path.label  %}
               </div>
-
             </div>
+            <div class="form-inline voffset2">
+              <div class="form-group">
+                {% render_field storage_form.username  placeholder=storage_form.username.label %}
+              </div>
+            </div>
+
             <div class="form-inline voffset2">
               <div class="form-group">
                 {% render_field storage_form.password  placeholder=storage_form.password.label %}
